2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 0.12.

==================== 0.11 ====================

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: Version 0.11.

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.glade: remove the splitter
	for now - we're not using the text view yet.
	
	* lib/config.py.in: add ADMIN_TOOL_TIMEOUT
	
	* lib/protosession.py: and use it here.
	
	* lib/sources/gconfsource.py:
	(GConfChange): store the key and value rather
	than the entry so we can unset the value if
	we wish.
	
	* lib/sources/paneldelegate.py: upd.
	
	* sabayon.spec.in: create /etc/gconf/2/local-defaults.path
	and /etc/gconf/2/local-mandatory.path

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* lib/protosession.py: clobber all process running
	as the prototype user before starting the new session.
	
	* lib/config.py.in: add CLOBBER_USER_PROCESSES

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/gconfsource.py:
	(GConfSource.sync): recursively add all the files
	in the GConf database to the ProfileStorage.
	(GConfSource.apply): copy the GConf database out
	from the ProfileStorage temporary install location.
	
	* lib/sources/filessource.py: fix typo.
	
	* lib/util.py:
	(debug_print): only take a pre-formatted string.
	
	* lib/storage.py:
	(ProfileStorage.delete_file): use list.remove() instead
	of non-existant	list.delete()
	(ProfileStorage.install): change the prefix for the
	temporary dir.

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/gconfsource.py: add some debugging.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: upd Xnest command line.
	
	* lib/sources/filessource.py: fix typos.
	
	* sabayon.spec.in: don't set the homedir to
	/var/sabayon - we don't use that anymore.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/userprofile.py:
	(ProfileChange): kill get_name(), get_type() and