@@ -1,5 +1,10 @@
 2005-02-17  Mark McLoughlin  <markmc@redhat.com>
 
+	* sabayon.spec.in: copy GDM's method of creating 
+	the sabayon user.
+
+2005-02-17  Mark McLoughlin  <markmc@redhat.com>
+
 	* configure.ac: post-release bump to 0.12.
 
 ==================== 0.11 ====================
